# cutlass

./: .clangd  .gitmodules  AGENTS.md  crtp.cpp  crtp.preprocessed.cpp  cute_jit_pipeline.md  cutlass_dsl_linked  hello.cpp  print.ipynb  profiler_build_script.sh  profiler_test.sh  simple_ssa.py  utils.sh
blackwell-tutorials/: 1sm_mma  1sm_mma.cu  2sm_mma  2sm_mma.cu  Makefile
claude/: CLAUDE_BLACKWELL_EXAMPLES.md  CLAUDE_DOCS.md  CLAUDE_NARROW_PRECISION.md  README.md  claude-cuteDSL-architecture.md  cuteDSL_compilation.md  cuteDSL_cpp.md  debugging_breakpoints.md  jit.md  jit_executor_selection.md  mma-atom-pattern.md
cluster_tma/: Makefile  clangd.config.yaml  debug.hpp  multicast  multicast.cu  tma_multicast_sm100.cu
codex/: codex-ARCHITECTURE.md  elementwise_apply_walkthrough.md
codex_config/: instructions.md
cuteDSL_exploration/: CALL_GRAPH.txt  MODULES.md  README.md  TRACE_end_to_end.md  dump_ir_and_cubin.py  example_minimal.py
cute_dsl_tutorials/: Makefile
cute_pipeline/: simple_kernel.py
dsl_tutorials/: Makefile  cutlass_logging.py  examine_libs.py  extract_ptx_from_cubin.py  ptx_dump_example.py  ptx_jit_executor.py  simple_kernel.py  tiled.tex  tiled_mma  tiled_mma.cu
dsmem/: Makefile  dsmem_demo.cu  ncu_script.sh  ptx_store.cu  run_ncu.sh  store_remote.cu  utils.hpp
elementwise_trace/: cutlass_logging.py  elementwise_apply.py  layout_tv.py  run_elementwise.sh  run_layout.sh
experiments/: Makefile  cutlass_logging.py  helloworld.py  nvfp4  nvfp4_test.cu  (+3 more)
pipelining/Awesome-Cute/: .gitignore  .gitmodules  CMakeLists.txt  build.sh  readme.md
pipelining/Awesome-Cute/gemm/: CMakeLists.txt  readme.md
pipelining/Awesome-Cute/gemm/marlin_gemm/: CMakeLists.txt  marlin.py  marlin_cute_kernel.cu  marlin_cute_trait.h  marlin_gemm.cpp  marlin_official_kernel.cu  marlin_profiling.py  marlin_test.py
pipelining/Awesome-Cute/gemm/naive_gemm/: CMakeLists.txt  gemm_multistage.cu  gemm_multistage.h
pipelining/Awesome-Cute/gemm/streamk_gemm/: CMakeLists.txt  dp_sk_block.h  gemm_streamk.cu  gemm_streamk.h
pipelining/Awesome-Cute/gemm/warp_speicalization_gemm/: CMakeLists.txt  gemm_naive_ws_sm8x.cu  gemm_naive_ws_sm8x.h  gemm_ws_cutlass_sm90a.h  gemm_ws_kernel_sm90a.h  gemm_ws_scheduler_sm90a.h  gemm_ws_sm90a.cu
pipelining/Awesome-Cute/include/: barrier.h  common.h  reference.h  utils.h
(+243 files in other folders)
